Fix feedback form and patient profile
